tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__Repreciwhat-AAAAAAAAAAAAAAAAAAAJBg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2310,
  "prerequisites": [
    2308
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Reprecipitated! It means you have separated a solid from a solution/suspension, then dissolved it again, and then separated it again.\n\nCombine the original Palladium Enriched Ammonia with Palladium Metallic Powder. This will get you Palladium Salt again, but also Reprecipitated Palladium.\n\nFrom now on you should skip the first step, it's not necessary anymore as this gives the same thing, but more. You do need to find a way to combine the dusts automatically though.\n\nWhen/if you run out of Palladium Enriched Ammonia, you can make more by adding Ammonia to Palladium Metallic Powder.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lRepreci... what?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    2308
  ],
  "rewards": [],
  "tasks": []
}
