tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__RhodiumPlatedPal-AAAAAAAAAAAAAAAAAAAJGQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2329,
  "prerequisites": [
    2328,
    2878
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Rhodium Plated Palladium is the LuV Tier Hull Material. Now that you know how to make it, you should automate it and make a bunch, you're gonna need it.\n\nWhy is it called plated if it's clearly an alloy you ask? I don't know either!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lRhodium-Plated Palladium",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2328,
    2878
  ],
  "rewards": [],
  "tasks": []
}
