tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__Ross128bTrip-AAAAAAAAAAAAAAAAAAAJBw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2311,
  "prerequisites": [
    215
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Ross128b is a lovely and habitable planet, that does not contain any hostile lifeforms. It offers a several new ore veins and, rumors say, there are ruins of ancient civilizations that left quite a few machines there. You can find this planet to the galactic south.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lRoss128b Trip",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    215
  ],
  "rewards": [],
  "tasks": []
}
